--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,18 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title:  The Tyger \n",
-      "Author: William Blake\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in json_object:\n",
     "    print('Title: ',i['title'], '\\nAuthor:', i['author'] )"
@@ -454,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +486,8 @@
     "def list_item_information():\n",
     "    for i in json_object:\n",
     "        print('Title: ',i['title'], '\\nAuthor:', i['author'])\n",
-    "\n"
+    "\n",
+    "list_item_information()"
    ]
   },
   {
@@ -503,7 +495,104 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    " \n",
+    "# Data to be written\n",
+    "dictionary = {\n",
+    "    \"name\": \"sathiyajith\",\n",
+    "    \"rollno\": 56,\n",
+    "    \"cgpa\": 8.6,\n",
+    "    \"phonenumber\": \"9976770500\"\n",
+    "}\n",
+    " \n",
+    "# Serializing json\n",
+    "json_object = json.dumps(dictionary, indent=4)\n",
+    "test1 = 'test1'\n",
+    "# Writing to sample.json\n",
+    "with open('json.dumps(test1)', \"w\") as outfile:\n",
+    "    outfile.write(json_object)\n",
+    "\n",
+    "test1 = json.load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Opening JSON file\n",
+    "with open('choice_1.json', 'r') as openfile: \n",
+    "    # Reading from json file\n",
+    "    json_object = json.load(openfile)\n",
+    "\n",
+    "print(json_object)\n",
+    "print(type(json_object))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "write() argument must be str, not list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [73], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mchoice_1.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m outfile:\n\u001b[0;32m     14\u001b[0m         outfile\u001b[39m.\u001b[39mwrite(json_object)\n\u001b[1;32m---> 16\u001b[0m write_item_from_this_API_to_json()\n",
+      "Cell \u001b[1;32mIn [73], line 14\u001b[0m, in \u001b[0;36mwrite_item_from_this_API_to_json\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m json_object \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(requests\u001b[39m.\u001b[39mget(URL)\u001b[39m.\u001b[39mtext)\n\u001b[0;32m     13\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mchoice_1.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m outfile:\n\u001b[1;32m---> 14\u001b[0m     outfile\u001b[39m.\u001b[39;49mwrite(json_object)\n",
+      "\u001b[1;31mTypeError\u001b[0m: write() argument must be str, not list"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "request_name = 'Blake'#'Robinson' # input('What is the name of the author?') 'Rupert Brooke''William Blake'\n",
+    "request_poem = 'Tyger'# Home' # input('What is the name of the poem?')'Stanzas of the Rose''The Tyger'\n",
+    "\n",
+    "def write_item_from_this_API_to_json():\n",
+    "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "    json_object = json.loads(requests.get(URL).text)\n",
+    "    \n",
+    "    with open(\"choice_1.json\", \"w\") as outfile:\n",
+    "        outfile.write(json_object)\n",
+    "\n",
+    "write_item_from_this_API_to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poem Title:    The Tyger\n",
+      "Poem Author:   William Blake\n",
+      "['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def list_item_information():\n",
+    "    for i in json_object:\n",
+    "        body = i['lines']        \n",
+    "        print(f\"{'Poem Title:':<14} {i['title']}\")\n",
+    "        print(f\"{'Poem Author:':<15}{i['author']}\")\n",
+    "        print(body)\n",
+    "list_item_information()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
