--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,9 +508,9 @@
     " \n",
     "# Serializing json\n",
     "json_object = json.dumps(dictionary, indent=4)\n",
-    "test1 = 'test1'\n",
+    "test1 = 'weeeeeeeeeeeeeeeeeeeee'\n",
     "# Writing to sample.json\n",
-    "with open('json.dumps(test1)', \"w\") as outfile:\n",
+    "with open('[test1].json', \"w\") as outfile:\n",
     "    outfile.write(json_object)\n",
     "\n",
     "test1 = json.load"
