--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,15 +59,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1411489686.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [1], line 10\u001b[1;36m\u001b[0m\n\u001b[1;33m    print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.') d\u001b[0m\n\u001b[1;37m                                                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Document:\n",
+      " \n",
+      " Tyger, tyger, burning bright\n",
+      "In the forests of the night,\n",
+      "What immortal hand or eye\n",
+      "Could frame thy fearful symmetry?\n",
+      "\n",
+      "In what distant deeps or skies\n",
+      "Burnt the fire of thine eyes?\n",
+      "On what wings dare he aspire?\n",
+      "What the hand dare seize the fire?\n",
+      "\n",
+      "And what shoulder and what art\n",
+      "Could twist the sinews of thy heart?\n",
+      "And, when thy heart began to beat,\n",
+      "What dread hand and what dread feet?\n",
+      "\n",
+      "What the hammer?  what the chain?\n",
+      "In what furnace was thy brain?\n",
+      "What the anvil? what dread grasp\n",
+      "Dare its deadly terrors clasp?\n",
+      "\n",
+      "When the stars threw down their spears,\n",
+      "And watered heaven with their tears,\n",
+      "Did he smile his work to see?\n",
+      "Did he who made the lamb make thee?\n",
+      "\n",
+      "Tyger, tyger, burning bright\n",
+      "In the forests of the night,\n",
+      "What immortal hand or eye\n",
+      "Dare frame thy fearful symmetry?\n",
+      "\n",
+      "Count of text: 946. Count of doc: 285\n",
+      "\n",
+      "Raw polarity Score: -0.14506172839506173 \n",
+      "Polarity Score: -0.15\n",
+      "\n",
+      "With a score of -0.15, we have a slightly negative yet almost neutural text reaction.\n"
      ]
     }
    ],
@@ -78,10 +114,10 @@
     "doc = nlp(text)\n",
     "p_score = doc._.blob.polarity\n",
     "\n",
-    "print('Original Document: \\n', doc)\n",
+    "print('Original Document:\\n \\n', poem)\n",
     "print(f'\\nCount of text: {len(text)}. Count of doc: {len(doc)}')\n",
     "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
-    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.') d"
+    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')"
    ]
   },
   {
@@ -95,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +140,7 @@
        "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,18 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'doc' is not defined",
+     "evalue": "name 'title' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(doc[title])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'doc' is not defined"
+      "Cell \u001b[1;32mIn [4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(doc[title])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'title' is not defined"
      ]
     }
    ],
