--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin2.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin2.ipynb
@@ -2,34 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "write() argument must be str, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [10], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m text\u001b[39m=\u001b[39m\u001b[39mstr\u001b[39m(json_object)\n\u001b[0;32m     11\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mchoice_1.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m outfile:\n\u001b[1;32m---> 12\u001b[0m     outfile\u001b[39m.\u001b[39;49mwrite(json_object)\n",
-      "\u001b[1;31mTypeError\u001b[0m: write() argument must be str, not list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
     "\n",
-    "request_name = 'Poe'\n",
-    "request_poem = 'Raven'\n",
     "\n",
-    "URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
-    "json_object = json.loads(requests.get(URL).text)\n",
-    "text=str(json_object)\n",
+    "name = 'Blake'\n",
+    "poem = 'Tyger'\n",
     "\n",
-    "with open(\"choice_1.json\", \"w\") as outfile:\n",
-    "    outfile.write(json_object)"
+    "def function():\n",
+    "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "    result = json.loads(requests.get(URL).text)\n",
+    "    nlp = spacy.load('en_core_web_sm')\n",
+    "    text = str(result)\n",
+    "    nlp.add_pipe(\"spacytextblob\")\n",
+    "    doc = nlp(text)\n",
+    "    p_score = doc._.blob.polarity\n",
+    "    \n",
+    "    for i in json_object:\n",
+    "        body = i['lines']        \n",
+    "        print(f\"{'Poem Title:':<14} {i['title']}\")\n",
+    "        print(f\"{'Poem Author:':<15}{i['author']}\")\n",
+    "        #print(body)    \n",
+    "    return doc\n",
+    "\n",
+    "function()\n"
    ]
   },
   {
@@ -38,12 +40,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def list_item_information():\n",
-    "    for i in json_object:\n",
-    "        body = i['lines']        \n",
-    "        print(f\"{'Poem Title:':<14} {i['title']}\")\n",
-    "        print(f\"{'Poem Author:':<15}{i['author']}\")\n",
-    "        #print(body)"
+    "def list_item_information():\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(\"choice_1.json\", \"w\") as outfile:\n",
+    "    outfile.write(text)"
    ]
   }
  ],
