--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,40 +131,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [9], line 32\u001b[0m\n\u001b[0;32m     29\u001b[0m         json\u001b[39m.\u001b[39mdump(json_object, outfile)\n\u001b[0;32m     31\u001b[0m \u001b[39m# Define variables\u001b[39;00m\n\u001b[1;32m---> 32\u001b[0m request_name \u001b[39m=\u001b[39m \u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mWhat is the full name of the author?\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m# 'William Blake' 'Alexander Pope' 'Thomas More'         'Robinson'\u001b[39;00m\n\u001b[0;32m     33\u001b[0m request_poem \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mWhat is the name of the poem?\u001b[39m\u001b[39m'\u001b[39m)        \u001b[39m# 'The Tyger'     'The Alley'      'All In a Family Way' 'Stanzas to the Rose'\u001b[39;00m\n\u001b[0;32m     35\u001b[0m \u001b[39m# Execute function\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1177\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1173\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1174\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1175\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1176\u001b[0m     )\n\u001b[1;32m-> 1177\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[0;32m   1178\u001b[0m     \u001b[39mstr\u001b[39;49m(prompt),\n\u001b[0;32m   1179\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m   1180\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1181\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m   1182\u001b[0m )\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1219\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1216\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m   1217\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1218\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1219\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m   1220\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1221\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
     }
    ],
    "source": [
-    "import requests\n",
-    "import json\n",
-    "import spacy \n",
-    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "# %%%%% DELETE MEEEEEE https://poetrydb.org/author/Thomas%20Moore\n",
     "\n",
-    "request_name = 'Blake'#'Robinson' # input('What is the name of the author?') 'Rupert Brooke''William Blake'\n",
-    "request_poem = 'Tyger'# Home' # input('What is the name of the poem?')'Stanzas of the Rose''The Tyger'\n",
-    "\n",
-    "def function():\n",
+    "# Create function\n",
+    "def function(request_name, request_poem):\n",
+    "    # Pull function's data\n",
     "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
-    "    result = json.loads(requests.get(URL).text)\n",
+    "    json_object = json.loads(requests.get(URL).text)\n",
+    "    \n",
+    "    # Sentiment analysis\n",
     "    nlp = spacy.load('en_core_web_sm')\n",
-    "    text = str(result)\n",
     "    nlp.add_pipe(\"spacytextblob\")\n",
-    "    doc = nlp(text)\n",
+    "    \n",
+    "    # Modify data\n",
+    "    text = str(json_object)\n",
+    "    doc = nlp(text)    \n",
     "    p_score = doc._.blob.polarity\n",
-    "    return doc\n",
+    "    \n",
+    "    # Print information\n",
+    "    for i in json_object:\n",
+    "        body = i['lines']  \n",
+    "        title = i['title']      \n",
+    "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
+    "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
+    "        print(f\"{'Polarity Score:':<19}{round(p_score,2)}\")\n",
+    "        print('\\n',body)\n",
+    "    \n",
+    "    # Write the data\n",
+    "    with open(f\"{title}.json\", \"w\") as outfile:\n",
+    "        json.dump(json_object, outfile)\n",
     "\n",
-    "function()"
+    "# Define variables\n",
+    "request_name = input('What is the full name of the author?') # 'William Blake' 'Alexander Pope' 'Thomas More'         'Robinson'\n",
+    "request_poem = input('What is the name of the poem?')        # 'The Tyger'     'The Alley'      'All In a Family Way' 'Stanzas to the Rose'\n",
+    "\n",
+    "# Execute function\n",
+    "function(request_name, request_poem)"
    ]
   },
   {
