--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -533,22 +533,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "write() argument must be str, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [73], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mchoice_1.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m outfile:\n\u001b[0;32m     14\u001b[0m         outfile\u001b[39m.\u001b[39mwrite(json_object)\n\u001b[1;32m---> 16\u001b[0m write_item_from_this_API_to_json()\n",
-      "Cell \u001b[1;32mIn [73], line 14\u001b[0m, in \u001b[0;36mwrite_item_from_this_API_to_json\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m json_object \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(requests\u001b[39m.\u001b[39mget(URL)\u001b[39m.\u001b[39mtext)\n\u001b[0;32m     13\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mchoice_1.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m outfile:\n\u001b[1;32m---> 14\u001b[0m     outfile\u001b[39m.\u001b[39;49mwrite(json_object)\n",
-      "\u001b[1;31mTypeError\u001b[0m: write() argument must be str, not list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -562,8 +549,8 @@
     "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
     "    json_object = json.loads(requests.get(URL).text)\n",
     "    \n",
-    "    with open(\"choice_1.json\", \"w\") as outfile:\n",
-    "        outfile.write(json_object)\n",
+    "    with open(f\"{request_poem}.json\", \"w\") as outfile:\n",
+    "        json.dump(json_object, outfile)\n",
     "\n",
     "write_item_from_this_API_to_json()"
    ]
@@ -592,6 +579,33 @@
     "        print(body)\n",
     "list_item_information()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    " \n",
+    "# We can straight away open the json file in 'read' mode, \n",
+    "# the way we do it with .txt and .csv files\n",
+    "with open(\"example.json\",\"r\") as file:\n",
+    "    jsonData = json.load(file)\n",
+    " \n",
+    "print(\"Type of JSON Object: \", type(jsonData))\n",
+    " \n",
+    "# Traversing the json file\n",
+    "for name in jsonData:\n",
+    "    print(\"Name: \", name)\n",
+    "    print(\"Phone Number: \", jsonData[name][\"number\"])\n",
+    "    print(\"Age: \", jsonData[name][\"age\"])\n",
+    "    \n",
+    "    print(\"Address:\")\n",
+    "    for line in jsonData[name][\"address\"]:\n",
+    "        print(line)\n",
+    "    print()\n"
    ]
   }
  ],
