--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -131,20 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [9], line 32\u001b[0m\n\u001b[0;32m     29\u001b[0m         json\u001b[39m.\u001b[39mdump(json_object, outfile)\n\u001b[0;32m     31\u001b[0m \u001b[39m# Define variables\u001b[39;00m\n\u001b[1;32m---> 32\u001b[0m request_name \u001b[39m=\u001b[39m \u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mWhat is the full name of the author?\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m# 'William Blake' 'Alexander Pope' 'Thomas More'         'Robinson'\u001b[39;00m\n\u001b[0;32m     33\u001b[0m request_poem \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mWhat is the name of the poem?\u001b[39m\u001b[39m'\u001b[39m)        \u001b[39m# 'The Tyger'     'The Alley'      'All In a Family Way' 'Stanzas to the Rose'\u001b[39;00m\n\u001b[0;32m     35\u001b[0m \u001b[39m# Execute function\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1177\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1173\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1174\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1175\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1176\u001b[0m     )\n\u001b[1;32m-> 1177\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[0;32m   1178\u001b[0m     \u001b[39mstr\u001b[39;49m(prompt),\n\u001b[0;32m   1179\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m   1180\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1181\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m   1182\u001b[0m )\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1219\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1216\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m   1217\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1218\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1219\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m   1220\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1221\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poem Title:         Stanzas to the Rose\n",
+      "Poem Author:        Robinson\n",
+      "Polarity Score:     0.33\n"
      ]
     }
    ],
@@ -172,40 +168,19 @@
     "        title = i['title']      \n",
     "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
     "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
-    "        print(f\"{'Polarity Score:':<19}{round(p_score,2)}\")\n",
-    "        print('\\n',body)\n",
+    "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
+    "        # print('\\n',body)\n",
     "    \n",
     "    # Write the data\n",
     "    with open(f\"{title}.json\", \"w\") as outfile:\n",
     "        json.dump(json_object, outfile)\n",
     "\n",
     "# Define variables\n",
-    "request_name = input('What is the full name of the author?') # 'William Blake' 'Alexander Pope' 'Thomas More'         'Robinson'\n",
-    "request_poem = input('What is the name of the poem?')        # 'The Tyger'     'The Alley'      'All In a Family Way' 'Stanzas to the Rose'\n",
+    "request_name = 'robinson' #input('What is the full name of the author?') # 'William Blake' 'Alexander Pope' 'Robinson'\n",
+    "request_poem = 'stanzas to the' #input('What is the name of the poem?')        # 'The Tyger'     'The Alley'      'Stanzas to the Rose'\n",
     "\n",
     "# Execute function\n",
     "function(request_name, request_poem)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'title' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(doc[title])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'title' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(doc[title])"
    ]
   },
   {
@@ -219,10 +194,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poem Title:         Stanzas to the Rose\n",
+      "Poem Author:        Robinson\n",
+      "Polarity Score:     0.33\n",
+      "\n",
+      " [\"SWEET PICTURE of Life's chequer'd hour!\", 'Ah, wherefore droop thy blushing head?', \"Tell me, oh tell me, hap'less flow'r,\", 'Is it because thy charms are fled?', 'Come, gentle ROSE, and learn from me', 'A lesson of Philosophy.', '', \"Thy scented buds, LIFE'S joys disclose;\", 'They strew our paths with magic sweets;', 'Where many a thorn like thine, fair ROSE,', \"Full oft the weary wand'rer meets;\", 'And when he sees thy charms depart,', 'He feels thy thorn within his heart.', '', \"When Morn's bright torch illum'd the sky,\", \"Vainly thy flaunting buds display'd\", \"Enamell'd leaves of crimson die,\", \"Ill-fated blossoms doom'd to fade;\", \"So 'tis with BEAUTY, hapless flow'r,\", 'Its lustre blooms but for an hour.', '', 'Come blushing ROSE, and on my breast', 'Recline thy gentle head, and die;', \"Thy scatter'd leaves shall there be press'd,\", \"Bath'd with a tear from PITY'S eye;\", 'There shall thy balmy sweets impart', 'An essence grateful to my heart.', '', \"Thus SYMPATHY, with lenient pow'r,\", 'Shall bid thy fading charms bestow', \"Soft odours for life's happy hour,\", 'Kind, healing balsam for its woe!', 'If such thy virtues, ROSE DIVINE!', 'OH ! MAY THY ENVIED FATE BE MINE.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file1 = 'The Tyger'             # 'William Blake'  \n",
+    "file2 = 'The Alley'             # 'Alexander Pope'\n",
+    "file3 = 'Stanzas to the Rose'   # 'Robinson'\n",
+    "\n",
+    "def func_read_song_from_api_in_json(file_choice):\n",
+    "    nlp = spacy.load('en_core_web_sm')\n",
+    "    nlp.add_pipe(\"spacytextblob\") \n",
+    "    with open(f'{file_choice}.json','r') as file:\n",
+    "        json_data = json.load(file)\n",
+    "\n",
+    "    text = str(json_data)\n",
+    "    doc = nlp(text)    \n",
+    "    p_score = doc._.blob.polarity\n",
+    "\n",
+    "    for i in json_data:\n",
+    "        body = i['lines']  \n",
+    "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
+    "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
+    "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
+    "        print('\\n',body)\n",
+    "\n",
+    "\n",
+    "func_read_song_from_api_in_json(file3)"
+   ]
   }
  ],
  "metadata": {
