--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
     }
    ],
    "source": [
-    "# %%%%% DELETE MEEEEEE https://poetrydb.org/author/Thomas%20Moore\n",
+    "############################# DELETE MEEEEEE https://poetrydb.org/author/Thomas%20Moore\n",
     "\n",
     "# Create function\n",
     "def function(request_name, request_poem):\n",
@@ -176,11 +176,15 @@
     "        json.dump(json_object, outfile)\n",
     "\n",
     "# Define variables\n",
-    "request_name = 'robinson' #input('What is the full name of the author?') # 'William Blake' 'Alexander Pope' 'Robinson'\n",
-    "request_poem = 'stanzas to the' #input('What is the name of the poem?')        # 'The Tyger'     'The Alley'      'Stanzas to the Rose'\n",
+    "request_name = 'robinson' #input('What is the full name of the author?') \n",
+    "request_poem = 'stanzas to the' #input('What is the name of the poem?')  \n",
     "\n",
     "# Execute function\n",
-    "function(request_name, request_poem)"
+    "function(request_name, request_poem)\n",
+    "\n",
+    "# People \n",
+    "# 'William Blake' 'Alexander Pope' 'Robinson'\n",
+    "# 'The Tyger'     'The Alley'      'Stanzas to the Rose'"
    ]
   },
   {
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,9 +207,7 @@
      "text": [
       "Poem Title:         Stanzas to the Rose\n",
       "Poem Author:        Robinson\n",
-      "Polarity Score:     0.33\n",
-      "\n",
-      " [\"SWEET PICTURE of Life's chequer'd hour!\", 'Ah, wherefore droop thy blushing head?', \"Tell me, oh tell me, hap'less flow'r,\", 'Is it because thy charms are fled?', 'Come, gentle ROSE, and learn from me', 'A lesson of Philosophy.', '', \"Thy scented buds, LIFE'S joys disclose;\", 'They strew our paths with magic sweets;', 'Where many a thorn like thine, fair ROSE,', \"Full oft the weary wand'rer meets;\", 'And when he sees thy charms depart,', 'He feels thy thorn within his heart.', '', \"When Morn's bright torch illum'd the sky,\", \"Vainly thy flaunting buds display'd\", \"Enamell'd leaves of crimson die,\", \"Ill-fated blossoms doom'd to fade;\", \"So 'tis with BEAUTY, hapless flow'r,\", 'Its lustre blooms but for an hour.', '', 'Come blushing ROSE, and on my breast', 'Recline thy gentle head, and die;', \"Thy scatter'd leaves shall there be press'd,\", \"Bath'd with a tear from PITY'S eye;\", 'There shall thy balmy sweets impart', 'An essence grateful to my heart.', '', \"Thus SYMPATHY, with lenient pow'r,\", 'Shall bid thy fading charms bestow', \"Soft odours for life's happy hour,\", 'Kind, healing balsam for its woe!', 'If such thy virtues, ROSE DIVINE!', 'OH ! MAY THY ENVIED FATE BE MINE.']\n"
+      "Polarity Score:     0.33\n"
      ]
     }
    ],
@@ -229,7 +231,7 @@
     "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
     "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
     "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
-    "        print('\\n',body)\n",
+    "        # print('\\n',body)\n",
     "\n",
     "\n",
     "func_read_song_from_api_in_json(file3)"
@@ -238,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -252,11 +254,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "af31991c939d0d47fd88192dde140282c60bcd0650d9319c70f9d5b7f17cd661"
+    "hash": "0ae41e45250eb696c2277dfbd939b9be222f957334433f60364f37f2e4b8f76d"
    }
   }
  },
